--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <body>
     <div class="painel">
-        <h1>Feliz Aniversário!!!</h1>
+        <h1>Feliz Aniversário, Princesa!</h1>
         <img width="57%" src="rod/giphy.webp" alt="pinguin">
         <h2>Aceita um presente misterioso?</h2>
         <!-- Botões -->
