--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 </head>
 
 <body>
+
+<audio autoplay>
+  <source src="https://freesound.org/data/previews/367/367496_4654185-lq.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
+    
     <div class="painel">
         <h1>Feliz Aniversário, Princesa!</h1>
         <img width="57%" src="rod/giphy.webp" alt="pinguin">
